--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="close">Close</string>
     <string name="pay">Pay</string>
     <string name="paid">Cart paid</string>
+    <string name="add">Add to cart</string>
+    <string name="name_empty">Empty name</string>
+    <string name="price_invalid">Price not valid</string>
 
     <string-array name="item_types">
         <item>Book</item>
