--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sales Taxes</string>
+    <string name="app_name">Sales Taxes Problem</string>
     <string name="action_settings">Settings</string>
     <string name="name">Item name:</string>
     <string name="name_hint">Name</string>
@@ -15,6 +15,8 @@
     <string name="add">Add to cart</string>
     <string name="name_empty">Empty name</string>
     <string name="price_invalid">Price not valid</string>
+    <string name="at">at</string>
+    <string name="no_items">The cart is empty</string>
 
     <string-array name="item_types">
         <item>Book</item>
