last aesthetic fixes (I hope), working on the algorithm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,11 @@
     <string name="add">Add to cart</string>
     <string name="name_empty">Empty name</string>
     <string name="price_invalid">Price not valid</string>
-    <string name="at">at</string>
     <string name="no_items">The cart is empty</string>
+    <string name="total">Sales Taxes: %1$,.2f\nTotal: %2$,.2f</string>
+    <string name="clear">Clear</string>
+    <string name="cart_cleared">Cart cleared</string>
+    <string name="line_text">%1$d %2$s at %3$,.2f</string>
 
     <string-array name="item_types">
         <item>Book</item>
